fix(readme): updated readme

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <footer class="flex-row items-center fw-800 [ card__author ]">
       <img
-        src="/assets/images/image-avatar.webp"
+        src="./assets/images/image-avatar.webp"
         alt="Greg Hooper"
       >
       <address class="normal">Greg Hooper</address>
